fix: remove spacing outside of menu overlay

--- a/packages/vue-component-library/src/styles/ftva/_header-sticky.scss
+++ b/packages/vue-component-library/src/styles/ftva/_header-sticky.scss
@@ -6,7 +6,6 @@
         width: 100%;
         margin: 0 auto;
         padding: 0;
-        margin-inline: 18px;
 
         .donate-button {
             display: flex;
@@ -22,7 +21,6 @@
     @media #{$small} {
         .primary {
             padding-inline: 18px;
-            margin-inline: 0;
         }
     }
 }
