--- a/packages/vue-component-library/src/styles/ftva/_nav-primary.scss
+++ b/packages/vue-component-library/src/styles/ftva/_nav-primary.scss
@@ -29,6 +29,7 @@
         position: absolute;
         justify-content: center;
         width: 100%;
+        padding-inline: 18px;
 
         .section-name {
             font-size: 20px;
@@ -64,48 +65,52 @@
         }
     }
 
-        .search-button,
-        .close-button,
-        .more-menu-button {
-            background: none;
-            border: none;
-            height: 64px;
-            width: 65px;
-            padding: unset;
+    .search-button,
+    .close-button,
+    .more-menu-button {
+        background: none;
+        border: none;
+        height: 64px;
+        width: 65px;
+        padding: unset;
 
+        ::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: -1px;
+            opacity: 0; // use opacity to hide so we can animate it
+            width: 100%;
+            height: 5px;
+            background-color: var(--ftva-medium-blue);
+            margin-top: 5px;
+            transition-property: opacity;
+            transition-duration: $transition-timing-slow;
+            transition-timing-function: ease-in-out;
+        }
+
+        &:hover, &:focus {
             ::after {
-                content: '';
-                position: absolute;
-                left: 0;
-                bottom: -1px;
-                opacity: 0; // use opacity to hide so we can animate it
-                width: 100%;
-                height: 5px;
-                background-color: var(--ftva-medium-blue);
-                margin-top: 5px;
-                transition-property: opacity;
-                transition-duration: $transition-timing-slow;
-                transition-timing-function: ease-in-out;
-            }
-
-            &:hover, &:focus {
-                ::after {
-                    opacity: 1;
-                }
-            }
-
-            :deep(.hover) {
-                display: none;
-            }
-
-            :deep(.svg__fill--dark-navy) {
-                fill: white;
-            }
-
-            :deep(.svg__stroke--primary-blue-03) {
-                stroke: white;
+                opacity: 1;
             }
         }
+
+        :deep(.hover) {
+            display: none;
+        }
+
+        :deep(.svg__fill--dark-navy) {
+            fill: white;
+        }
+
+        :deep(.svg__stroke--primary-blue-03) {
+            stroke: white;
+        }
+    }
+
+    .search-button {
+        margin-left: 1px;
+    }
 
     // MOBILE MENU STYLES
     @media #{$small} {
@@ -293,6 +298,7 @@
             // open menu
             &.is-opened-mobile {
                 display: block;
+                padding-inline: 0;
 
                 :deep(.nav-menu-item) {
                     .section-name::after {
@@ -319,8 +325,6 @@
         .mobile-menu-slot {
             display: block;
             padding-top: 40px;
-            z-index: 25;
-            width: calc(100% - 20px);
             background-color: $navy-blue;
         }
     }
